[gd_scene load_steps=10 format=3 uid="uid://2pb23fgy4mwd"]

[ext_resource type="Script" uid="uid://djemv3ufy47ea" path="res://enemie/Chomp/chomp.gd" id="1_x4jjo"]
[ext_resource type="Texture2D" uid="uid://cjuxxh7462eiy" path="res://base de donné image/kenney_pixel-platformer/Tiles/Characters/tile_0011.png" id="2_vji4f"]
[ext_resource type="Texture2D" uid="uid://d0i3rsqwqd6w" path="res://base de donné image/kenney_pixel-platformer/Tiles/Characters/tile_0012.png" id="3_hqsrs"]
[ext_resource type="Texture2D" uid="uid://bxjxkxxyk8bw4" path="res://base de donné image/kenney_pixel-platformer/Tiles/Characters/tile_0012.1.png" id="3_vji4f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rq6un"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hqsrs")
}, {
"duration": 1.0,
"texture": ExtResource("3_hqsrs")
}],
"loop": true,
"name": &"detection",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vji4f")
}, {
"duration": 1.0,
"texture": ExtResource("3_vji4f")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vji4f")
}, {
"duration": 1.0,
"texture": ExtResource("2_vji4f")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vji4f")
}, {
"duration": 1.0,
"texture": ExtResource("2_vji4f")
}],
"loop": true,
"name": &"rise",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4klmd"]
size = Vector2(18, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_amm2v"]
size = Vector2(42, 210)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4jjo"]
size = Vector2(86, 212)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vji4f"]
size = Vector2(16, 6)

[node name="Chomp" type="CharacterBody2D"]
position = Vector2(279, 50)
script = ExtResource("1_x4jjo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rq6un")
animation = &"fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4klmd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 55)
shape = SubResource("RectangleShape2D_amm2v")

[node name="detection" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="detection"]
position = Vector2(-2, 55)
shape = SubResource("RectangleShape2D_x4jjo")

[node name="damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_vji4f")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
